--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "echo Starting... && ng serve",
     "build": "ng build",
     "build:ssr": "ng run CanariasCorvid19:server:dev",
     "test": "ng test",
@@ -13,10 +13,12 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "9.1.2",
+    "@angular/cdk": "^9.2.1",
     "@angular/common": "9.1.2",
     "@angular/compiler": "9.1.2",
     "@angular/core": "9.1.2",
     "@angular/forms": "9.1.2",
+    "@angular/material": "^9.2.1",
     "@angular/platform-browser": "9.1.2",
     "@angular/platform-browser-dynamic": "9.1.2",
     "@angular/platform-server": "9.1.2",
