--- a/ClientApp/angular.json
+++ b/ClientApp/angular.json
@@ -128,6 +128,10 @@
               "vendorChunk": false
             }
           }
+        },
+        "deploy": {
+          "builder": "angular-cli-ghpages:deploy",
+          "options": {}
         }
       }
     },
